[workspace]
resolver = "2"
members = [
    "replaydb",
    "replay",
]

[workspace.dependencies]
anyhow = "1"
derive_builder = "0.20"
env_logger = "0.11"
hashbrown = "0.14"
log = "0.4"
parking_lot = "0.12"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-timerfd = "0.2"
uuid = { version = "1", features = ["v7"] }

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>"]
description = "ReplayDB Service"
homepage = "https://github.com/insight-platform/Replay"
repository = "https://github.com/insight-platform/Replay"
readme = "README.md"
keywords = ["computer-vision", "video-processing"]
categories = ["algorithms", "data-structures", "computer-vision"]
license = "In-Sight License"
rust-version = "1.70"


[profile.release]
opt-level = 3
codegen-units = 1

[profile.bench]
opt-level = 3
codegen-units = 1

