[package]
name = "replay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "replay-edge"
path = "src/edge/main.rs"

[[bin]]
name = "replay-cloud"
path = "src/cloud/main.rs"

[dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
replaydb = { path = "../replaydb" }
anyhow = "1"
