[package]
name = "replay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "replay-edge"
path = "src/edge/edge.rs"

[[bin]]
name = "replay-cloud"
path = "src/cloud/cloud.rs"

[dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
replaydb = { path = "../replaydb" }
anyhow = "1"
