[package]
name = "replay"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "replay-edge"
path = "src/edge/edge.rs"

[[bin]]
name = "replay-cloud"
path = "src/cloud/cloud.rs"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
replaydb = { path = "../replaydb" }
tokio = { workspace = true }
tokio-timerfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

actix-web = "4"
