[package]
name = "replaydb"
version = "0.1.0"
edition = "2021"

[dependencies]
savant_core = { git = "https://github.com/insight-platform/savant-rs", tag = "0.2.27" }
anyhow = "1"
uuid = { version = "1", features = ["v7"] }
bincode = { version = "2.0.0-rc.3" }
rocksdb = { version = "0.22" }
md-5 = "0.10"
hashbrown = "0.14"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
derive_builder = "0.20"

[dev-dependencies]
tempfile = "3.2"

