[package]
name = "replaydb"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bincode = { version = "2.0.0-rc.3" }
md-5 = "0.10"
mini-moka = "0.10"
ring = "0.17"
rocksdb = { version = "0.22" }
savant_core = { git = "https://github.com/insight-platform/savant-rs", tag = "0.3.4" }
twelf = { version = "0.15", features = ["json", "env", "shellexpand"], default-features = false }

anyhow = { workspace = true }
derive_builder = { workspace = true }
env_logger = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-timerfd = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
